syntax = "proto3";

package acl;

option go_package = "github.com/moul/acl/gen/pb;aclpb";

service AclService{
  rpc GetToken(GetTokenRequest) returns (GetTokenResponse) {};
  rpc AddToken(AddTokenRequest) returns (AddTokenResponse) {};
  rpc HasPerm(HasPermRequest) returns (HasPermResponse) {};
}

message GetTokenRequest {
  string id = 1;
}

message GetTokenResponse {
  Token token = 1;
  string err_msg = 2;
}

message HasPermRequest{
  string token_id = 1;
  string service = 2;
  string name = 3;
  string resource = 4;
}

message HasPermResponse {
  bool has_perm = 1;
  string err_msg = 2;
}

message AddTokenRequest {
  Token token = 1;
}

message AddTokenResponse {
  string id = 1;
  string err_msg = 2;
}

// models
message Token {
  string id = 1;
  string user_id = 2;
  string organization_id = 3;
  repeated Permission permissions = 4;
  repeated string roles = 5;
  // creation_date
  // expires
}

message Permission {
  string service = 1;
  string name = 2;
  string resource = 3;
}